--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,16 +1,17 @@
 allprojects {
     repositories {
         jcenter()
+        google()
     }
 }
 
 ext {
     //Android
-    androidBuildToolsVersion = "23.0.1"
+    androidBuildToolsVersion = "26.0.1"
     androidMinSdkVersion = 16
-    androidTargetSdkVersion = 22
-    androidCompileSdkVersion = 22
-    supportLibraryVersion = '24.2.0'
+    androidTargetSdkVersion = 25
+    androidCompileSdkVersion = 26
+    supportLibraryVersion = '26.0.0'
     otherLibraryVersion = '22.2.1'
 
     //ViewLibraries
